bynkc/tests/fixtures/negative/392_held_fn_body_leak/input.bynk
-- #718: held-resource linearity is enforced in `fn` bodies, not only handlers.
-- A held parameter is *owned* by the callee (the caller side treats passing it in
-- as a transfer), so a function that never disposes it leaks — same discipline as
-- a handler.
commons room {
  type ServerFrame = { text: String }

  fn swallow(c: Connection[ServerFrame]) -> Effect[()] {
    Effect.pure(())
  }
}
